# termuxpackagearchiver

./: README.md  pyproject.toml
termuxpackagearchiver/: __init__.py  requirements.txt  termuxpackagearchiver.py
